# hackathon

./: README.md  main.py  pyproject.toml  requirements.txt
static/: app.js  index.html  manifest.json  style.css  sw.js
